--- a/gas_utility_service/consumer_services/templates/signup.html
+++ b/gas_utility_service/consumer_services/templates/signup.html
@@ -25,6 +25,10 @@
         <input type="text" name="username" />
         <br/>
         <br/>
+        <h5>Email:</h5>
+        <input type="email" name="email" />
+        <br/>
+        <br/>
         <h5>Password:</h5>
         <input type="password" name="password1" />
         <br/>
