--- a/gas_utility_service/productionfiles/all.css
+++ b/gas_utility_service/productionfiles/all.css
@@ -23,4 +23,22 @@
     cursor: pointer;
     margin: 0 10px;
 }
-</style>
+
+.navbar {
+    background-color: #90EE90;
+    overflow: hidden;
+}
+
+.nav-button {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.nav-button:hover {
+    background-color: #0056b3;
+}
