--- a/gas_utility_service/consumer_services/templates/success.html
+++ b/gas_utility_service/consumer_services/templates/success.html
@@ -19,5 +19,11 @@
     <h1>Success!</h1>
     <br/>
 
+    <div>
+        <nav style="align-items: center;">
+            <a class="btn btn-primary"  href="/show_complaints">Show Your Filed Complaints</a>
+            <a class="btn btn-primary"  href="/profile">Go to Your Profile</a>
+        </nav>
+    </div>
 </div>
 {% endblock %}
