--- a/gas_utility_service/consumer_services/templates/base.html
+++ b/gas_utility_service/consumer_services/templates/base.html
@@ -15,8 +15,7 @@
 
 </head>
 
-<body>
-
+<body style="background-color: beige;">
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <img src="{% static 'logo.jpg' %}" alt="Company Logo" width="50px" height="50px" style="padding: 5px;"/>
