--- a/gas_utility_service/consumer_services/templates/profile.html
+++ b/gas_utility_service/consumer_services/templates/profile.html
@@ -10,45 +10,56 @@
 
 {% endif %}
 <link rel="stylesheet" href="{% static 'all.css' %}" type="text/css" >
-<nav style="align-items: self-start;">
-    <a class="btn btn-primary"  href="/profile">Submit Complaint</a>
+</br>
+</br>
+<div class="container_half">
+    <div class="block_half">
+        <img src="{% static 'user.png' %}" alt="User Logo" width=115px height=115px style="padding: 5px;"/>
+        <h1 style="font-weight: 700;color: #676767;">Hi, {{ user }}</h1>
+    </br>
+        <h4 style="font-family: Arial, Helvetica, sans-serif;"> Your user ID: {{ user.id }}</h4>
+        <h4 style="font-family: Arial, Helvetica, sans-serif;"> Registered Email: {{ user.email }}</h4>
+    </br>
     <a class="btn btn-primary"  href="/show_complaints">Show Complaints</a>
-</nav>
+    </div>
+    <div class="block_half">
+        <div style="display: flex;" >
+            <div class="image">
+                <img src="{% static 'doc.png' %}" alt="User Logo" width=125% height=100% style="padding: 5px;"/>
+            </div>
+            <div class="text">
+              <h2 style="padding-top: 10%;">File your complaint here!</h2>
+            </div>
+        </div>
 
-<h1>User</h1>
-<ul>
-    <li>{{ user }}</li>
-    <li>{{ user.username }}</li>
-    <li>{{ user.id }}</li>
-    <li>{{ user.email }}</li>
-
-</ul>
-
-<form method = "POST" enctype="multipart/form-data"  action="{% url 'submit_request' %}">
-    {% csrf_token %}
-    <label for="Issue">Choose your issue:</label>
-
-    <select name="Issue" id="Issue">
-    <option value="Pipeline Leakage">Pipeline Leakage</option>
-    <option value="Pipeline Installment Request">Pipeline Installment Request</option>
-    <option value="Pipeline Failure">Pipeline Failure</option>
-    <option value="Other">Other</option>
-    </select>
-
-    <h5>Address:</h5>
-    <input type="text" name="address" placeholder="Service address"/>
-    <br/>
-    <br/>
-    <h5>Extra Information:</h5>
-    <input type="text" name="extra_info" placeholder="Any extra inform"/>
-    <br/>
-    <br/>
-    <h5>Please attach any file if needed:</h5>
-    <input type="file" name="file" placeholder="file"/>
-    <br/>
-    <br/>
-    <input class ="btn btn-primary" type="submit" value= "Submit" />
-    <br/>
-</form>
+        </br>
+        <form method = "POST" enctype="multipart/form-data"  action="{% url 'submit_request' %}">
+            {% csrf_token %}
+            <label for="Issue"> <h5>Choose your issue:</h5></label>
+        
+            <select name="Issue" id="Issue">
+            <option value="Pipeline Leakage">Pipeline Leakage</option>
+            <option value="Pipeline Installment Request">Pipeline Installment Request</option>
+            <option value="Pipeline Failure">Pipeline Failure</option>
+            <option value="Other">Other</option>
+            </select>
+        
+            <h5>Address:</h5>
+            <input type="text" name="address" placeholder="Service address"/>
+            <br/>
+            <br/>
+            <h5>Extra Information:</h5>
+            <input type="text" name="extra_info" placeholder="Any extra inform"/>
+            <br/>
+            <br/>
+            <h5>Please attach any file if needed:</h5>
+            <input type="file" name="file" placeholder="file"/>
+            <br/>
+            <br/>
+            <input class ="btn btn-primary" type="submit" value= "Submit" />
+            <br/>
+        </form>
+    </div>
+</div>
 
 {% endblock %}
