--- a/gas_utility_service/consumer_services/templates/profile_complaints.html
+++ b/gas_utility_service/consumer_services/templates/profile_complaints.html
@@ -10,39 +10,66 @@
 
 {% endif %}
 <link rel="stylesheet" href="{% static 'all.css' %}" type="text/css" >
-<nav style="align-items: self-start;">
-    <a class="btn btn-primary"  href="/profile">Submit Complaint</a>
-    <a class="btn btn-primary"  href="/show_complaints">Show Complaints</a>
-</nav>
 
-<h1>User</h1>
-<ul>
-    <li>{{ user }}</li>
-    <li>{{ user.username }}</li>
-    <li>{{ user.id }}</li>
-    <li>{{ user.email }}</li>
+<style>
+    table, th, td {
+      border: 1px solid;
+    }
+    th, td {
+        padding: 5px;
+        text-align: left;
+    }
+</style>
 
-</ul>
+</br>
+</br>
 
-<table border="1">
-    <tr>
-      <th>Complaint ID</th>
-      <th>Issue</th>
-      <th>Address</th>
-      <th>Extra Info</th>
-      <th>Status</th>
-      <th>Date updated</th>
-    </tr>
-    {% for member in mymembers %}
-      <tr>
-        <td>{{ member.issue_id }}</td>
-        <td>{{ member.issue }}</td>
-        <td>{{ member.address }}</td>
-        <td>{{ member.extra_info }}</td>
-        <td>{{ member.status }}</td>
-        <td>{{ member.date_updated }}</td>
-      </tr>
-    {% endfor %}
-</table>
+<div class="container_half">
+    <div class="block_half">
+        <img src="{% static 'user.png' %}" alt="User Logo" width=115px height=115px style="padding: 5px;"/>
+        <h1 style="font-weight: 700;color: #676767;">Hi, {{ user }}</h1>
+    </br>
+        <h4 style="font-family: Arial, Helvetica, sans-serif;"> Your user ID: {{ user.id }}</h4>
+        <h4 style="font-family: Arial, Helvetica, sans-serif;"> Registered Email: {{ user.email }}</h4>
+    </br>
+    <a class="btn btn-primary"  href="/profile">File Complaint</a>
+    <a class="btn btn-primary"  href="/logout">Logout</a>
+    </div>
 
+
+    <div class="block_half">
+        <div style="display: flex;" >
+            <div class="image">
+                <img src="{% static 'doc.png' %}" alt="User Logo" width=125% height=100% style="padding: 5px;"/>
+            </div>
+            <div class="text">
+              <h2 style="padding-top: 10%;">View your complaints here!</h2>
+            </div>
+        </div>
+
+        </br>
+        <table>
+            <tr>
+              <th>Complaint ID</th>
+              <th>Issue</th>
+              <th>Address</th>
+              <th>Extra Info</th>
+              <th>Status</th>
+              <th>Date updated</th>
+            </tr>
+            {% for member in mymembers %}
+              <tr>
+                <td>{{ member.issue_id }}</td>
+                <td>{{ member.issue }}</td>
+                <td>{{ member.address }}</td>
+                <td>{{ member.extra_info }}</td>
+                <td>{{ member.status }}</td>
+                <td>{{ member.date_updated }}</td>
+              </tr>
+            {% endfor %}
+        </table>
+    </div>
+
+
+</div>
 {% endblock %}
