--- a/gas_utility_service/productionfiles/all.css
+++ b/gas_utility_service/productionfiles/all.css
@@ -24,21 +24,16 @@
     margin: 0 10px;
 }
 
-.navbar {
-    background-color: #90EE90;
-    overflow: hidden;
+.container_half {
+    display: flex;
 }
 
-.nav-button {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 18px;
-}
-
-.nav-button:hover {
-    background-color: #0056b3;
+.block_half {
+    width: 50%; /* Each block takes 50% width */
+    padding: 20px;
+    background-color: #fff;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    padding: 50px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
