--- a/gas_utility_service/consumer_services/templates/profile_complaints.html
+++ b/gas_utility_service/consumer_services/templates/profile_complaints.html
@@ -25,19 +25,22 @@
 </br>
 
 <div class="container_half">
-    <div class="block_half">
+    <div class="block_half" style="width: 30%;">
         <img src="{% static 'user.png' %}" alt="User Logo" width=115px height=115px style="padding: 5px;"/>
         <h1 style="font-weight: 700;color: #676767;">Hi, {{ user }}</h1>
     </br>
-        <h4 style="font-family: Arial, Helvetica, sans-serif;"> Your user ID: {{ user.id }}</h4>
-        <h4 style="font-family: Arial, Helvetica, sans-serif;"> Registered Email: {{ user.email }}</h4>
+        <h4 style="font-family: Arial, Helvetica, sans-serif;"> Your user ID:</h4>
+        <h4 style="font-family: Arial, Helvetica, sans-serif; color: #afafaf;">{{ user.id }}</h4>
+        </br>
+        <h4 style="font-family: Arial, Helvetica, sans-serif;"> Registered Email:</h4>
+        <h4 style="font-family: Arial, Helvetica, sans-serif; color: #afafaf;">{{ user.email }}</h4>
     </br>
     <a class="btn btn-primary"  href="/profile">File Complaint</a>
     <a class="btn btn-primary"  href="/logout">Logout</a>
     </div>
 
 
-    <div class="block_half">
+    <div class="block_half" style="width: 70%; overflow:auto">
         <div style="display: flex;" >
             <div class="image">
                 <img src="{% static 'doc.png' %}" alt="User Logo" width=125% height=100% style="padding: 5px;"/>
@@ -48,14 +51,16 @@
         </div>
 
         </br>
-        <table>
+        <table  >
             <tr>
-              <th>Complaint ID</th>
+              <th>Issue ID</th>
               <th>Issue</th>
               <th>Address</th>
               <th>Extra Info</th>
               <th>Status</th>
               <th>Date updated</th>
+              <th>File Attached</th>
+              <th>Note from Company</th>
             </tr>
             {% for member in mymembers %}
               <tr>
@@ -64,7 +69,9 @@
                 <td>{{ member.address }}</td>
                 <td>{{ member.extra_info }}</td>
                 <td>{{ member.status }}</td>
-                <td>{{ member.date_updated }}</td>
+                <td>{{ member.date_created }}</td>
+                <td><a href="/media/{{ member.file }}">{{ member.file }}</a></td>
+                <td>{{ member.admin_note }}</td>
               </tr>
             {% endfor %}
         </table>
