--- a/gas_utility_service/consumer_services/templates/signup.html
+++ b/gas_utility_service/consumer_services/templates/signup.html
@@ -31,8 +31,13 @@
         <br/>
         <h5>Password:</h5>
         <input type="password" name="password1" />
-        <br/>
-        <br/>
+        <div>
+            <ul style="display: inline-block; text-align: left; font-size: 13px; color: rgb(183, 177, 177);">
+                <li>Include a combination of letters and numbers.</li>
+                <li>Make the password at least 8 characters long.</li>
+                <li>Keep the Password and Confirm Password same.</li>
+            </ul>
+        </div>
         <h5>Confirm Password:</h5>
         <input type="password" name="password2" />
         <br/>
